run producer and consumer in notebook

--- a/run.ipynb
+++ b/run.ipynb
@@ -415,6 +415,113 @@
     "GROUP BY\n",
     "\tCCY_COUPLE"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial rates: {'EURUSD': {'event_time': 0, 'rate': 0, 'rate_yesterday_5pm': 1.0336}, 'NZDUSD': {'event_time': 0, 'rate': 0, 'rate_yesterday_5pm': 1.03193}, 'USDJPY': {'event_time': 0, 'rate': 0, 'rate_yesterday_5pm': 1.00195}, 'GBPUSD': {'event_time': 0, 'rate': 0, 'rate_yesterday_5pm': 1.03129}, 'AUDUSD': {'event_time': 0, 'rate': 0, 'rate_yesterday_5pm': 1.02467}}\n",
+      "Subscribed to topic currency_rates. Waiting for messages...\n",
+      "EURUSD: with rate 1.03595. Rate change: 0.227\n",
+      "NZDUSD: with rate 1.03868. Rate change: 0.654\n",
+      "USDJPY: with rate 1.04985. Rate change: 4.781\n",
+      "GBPUSD: with rate 1.00502. Rate change: -2.547\n",
+      "AUDUSD: with rate 1.01555. Rate change: -0.89\n",
+      "EURUSD: with rate 1.00741. Rate change: -2.534\n",
+      "NZDUSD: with rate 1.03868. Rate change: 0.654\n",
+      "USDJPY: with rate 1.04985. Rate change: 4.781\n",
+      "GBPUSD: with rate 1.00502. Rate change: -2.547\n",
+      "AUDUSD: with rate 1.01555. Rate change: -0.89\n",
+      "EURUSD: with rate 1.00741. Rate change: -2.534\n",
+      "NZDUSD: with rate 1.0366. Rate change: 0.453\n",
+      "USDJPY: with rate 1.04985. Rate change: 4.781\n",
+      "GBPUSD: with rate 1.00502. Rate change: -2.547\n",
+      "AUDUSD: with rate 1.01555. Rate change: -0.89\n",
+      "EURUSD: with rate 1.00741. Rate change: -2.534\n",
+      "NZDUSD: with rate 1.0366. Rate change: 0.453\n",
+      "USDJPY: with rate 1.04831. Rate change: 4.627\n",
+      "GBPUSD: with rate 1.00502. Rate change: -2.547\n",
+      "AUDUSD: with rate 1.01555. Rate change: -0.89\n",
+      "EURUSD: with rate 1.01084. Rate change: -2.202\n",
+      "NZDUSD: with rate 1.0366. Rate change: 0.453\n",
+      "USDJPY: with rate 1.04831. Rate change: 4.627\n",
+      "GBPUSD: with rate 1.00502. Rate change: -2.547\n",
+      "AUDUSD: with rate 1.01555. Rate change: -0.89\n",
+      "EURUSD: with rate 1.01084. Rate change: -2.202\n",
+      "NZDUSD: with rate 1.02618. Rate change: -0.557\n",
+      "USDJPY: with rate 1.04831. Rate change: 4.627\n",
+      "GBPUSD: with rate 1.00502. Rate change: -2.547\n",
+      "AUDUSD: with rate 1.01555. Rate change: -0.89\n",
+      "EURUSD: with rate 1.03215. Rate change: -0.14\n",
+      "NZDUSD: with rate 1.02618. Rate change: -0.557\n",
+      "USDJPY: with rate 1.04831. Rate change: 4.627\n",
+      "GBPUSD: with rate 1.00502. Rate change: -2.547\n",
+      "AUDUSD: with rate 1.01555. Rate change: -0.89\n",
+      "^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python3 consumer.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "here only recieve the last rate "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Consuming data from KSQL...\n",
+      "Received update: [{\"header\":{\"queryId\":\"transient_CURRENCY_RATES_TABLE_3656669947742874335\",\"schema\":\"`CCY_COUPLE` STRING, `RATE` DOUBLE, `LAST_EVENT_TIME` BIGINT\"}},\n",
+      "Received update: {\"row\":{\"columns\":[\"EURUSD\",1.01639,1729595362501]}},\n",
+      "Received update: {\"row\":{\"columns\":[\"GBPUSD\",1.00939,1729595364504]}},\n",
+      "Received update: {\"row\":{\"columns\":[\"NZDUSD\",1.00895,1729595365505]}},\n",
+      "Received update: {\"row\":{\"columns\":[\"USDJPY\",1.04676,1729595367509]}},\n",
+      "Received update: {\"row\":{\"columns\":[\"AUDUSD\",1.02565,1729595369514]}},\n",
+      "Received update: {\"row\":{\"columns\":[\"NZDUSD\",1.02087,1729595371516]}},\n",
+      "Received update: {\"row\":{\"columns\":[\"NZDUSD\",1.003,1729595372518]}},\n",
+      "Received update: {\"row\":{\"columns\":[\"AUDUSD\",1.02341,1729595373520]}},\n",
+      "Received update: {\"row\":{\"columns\":[\"NZDUSD\",1.02365,1729595374522]}},\n",
+      "Received update: {\"row\":{\"columns\":[\"USDJPY\",1.0463,1729595375527]}},\n",
+      "Received update: {\"row\":{\"columns\":[\"NZDUSD\",1.00496,1729595376528]}},\n",
+      "Received update: {\"row\":{\"columns\":[\"GBPUSD\",1.0303,1729595377531]}},\n",
+      "Received update: {\"row\":{\"columns\":[\"EURUSD\",1.01878,1729595378535]}},\n",
+      "Received update: {\"row\":{\"columns\":[\"USDJPY\",1.01617,1729595379538]}},\n",
+      "Received update: {\"row\":{\"columns\":[\"AUDUSD\",1.00244,1729595380539]}},\n",
+      "Received update: {\"row\":{\"columns\":[\"EURUSD\",1.00386,1729595381546]}},\n",
+      "Received update: {\"row\":{\"columns\":[\"AUDUSD\",1.001,1729595382548]}},\n",
+      "Received update: {\"row\":{\"columns\":[\"USDJPY\",1.03454,1729595383549]}},\n",
+      "Received update: {\"row\":{\"columns\":[\"NZDUSD\",1.01263,1729595385557]}},\n",
+      "^C\n",
+      "Consumer stopped.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python3 consumer_with_ksql.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
